--- a/.travis.yml
+++ b/.travis.yml
@@ -63,8 +63,8 @@ before_deploy:
     /usr/libexec/PlistBuddy -c "Add NSHighResolutionCapable bool True" Neutrino.app/Contents/Info.plist
     mkdir dmg
     mv Neutrino.app dmg
-    ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon ./resources/icons/icon.icns --background ./resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 Neutrino.dmg dmg
     export RELEASE_FILE=Neutrino.dmg
+    ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon ./resources/icons/icon.icns --background ./resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 ${RELEASE_FILE} dmg
   fi
 - |
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]
@@ -84,8 +84,8 @@ before_deploy:
     lddtree Neutrino.AppDir/usr/lib/qt5/plugins/platforms/libqxcb.so | grep "=>" | awk '{print $3}' | xargs cp -t Neutrino.AppDir/usr/lib/
     lddtree Neutrino.AppDir/usr/lib/libPythonQt.so | grep "=>" | awk '{print $3}' | xargs cp -t Neutrino.AppDir/usr/lib/
     rm -rf Neutrino
-    ./AppImageKit/AppImageAssistant Neutrino.AppDir Neutrino.AppDir
-    export RELEASE_FILE=Neutrino.AppDir
+    export RELEASE_FILE=Neutrino-`git describe --abbrev=0 --tags`.AppDir
+    ./AppImageKit/AppImageAssistant Neutrino.AppDir ${RELEASE_FILE}
   fi
 
 deploy:
