--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
     export Qt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5
     brew update; brew tap homebrew/science
     brew install gcc qt5 cfitsio cmake hdf4 hdf5 gsl netpbm
-    brew install fftw --with-openmp; 
+    brew install fftw --with-openmp
   fi
 - |
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]
