--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_install:
     sudo apt-get install -y qt56base qt56multimedia qt56script qt56svg qt56tools 
     sudo apt-get install -y libfftw3-dev libnetpbm10-dev libgsl0-dev libhdf5-dev libhdf4-dev libpython-dev
     sudo apt-get install apt-file
-    apt-file update
+    sudo apt-file update
     apt-file find Qt5LinguistToolsConfig.cmake
     apt-file find Qt5LinguistToolsConfigVersion.cmake
     apt-file find Qt5LinguistToolsMacros.cmake
