--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,6 @@ before_install:
     sudo apt-get update -qy
     sudo apt-get install -y qt57base qt57multimedia qt57script qt57svg qt57tools 
     source /opt/qt57/bin/qt57-env.sh
-    cat /opt/qt57/bin/qt57-env.sh
-    echo '>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>'
     sudo apt-get install -y libfftw3-dev libnetpbm10-dev libgsl0-dev libhdf5-dev libhdf4-dev libpython-dev
 
     git clone https://github.com/Kitware/CMake.git
@@ -53,17 +51,17 @@ script:
 - cmake -DCMAKE_CXX_COMPILER=$COMPILER -DQt5_DIR=$Qt5_DIR ..
 - make
 - cd ..
-- |
-  if [[ "$TRAVIS_OS_NAME" == "linux" ]]
-  then
-    wget https://github.com/probonopd/linuxdeployqt/releases/download/1/linuxdeployqt-1-x86_64.AppImage
-    ls -la
-    chmod +x linuxdeployqt-*-x86_64.AppImage
-    rm -rf Neutrino
-    export RELEASE_FILE=Neutrino-`git describe --abbrev=0 --tags`.AppImage
-    ./linuxdeployqt-*-x86_64.AppImage build_dir/bin/Neutrino -appimage -always-overwrite
-    ls -la
-  fi
+#- |
+#  if [[ "$TRAVIS_OS_NAME" == "linux" ]]
+#  then
+#    wget https://github.com/probonopd/linuxdeployqt/releases/download/1/linuxdeployqt-1-x86_64.AppImage
+#    ls -la
+#    chmod +x linuxdeployqt-*-x86_64.AppImage
+#    rm -rf Neutrino
+#    export RELEASE_FILE=Neutrino-`git describe --abbrev=0 --tags`.AppImage
+#    ./linuxdeployqt-*-x86_64.AppImage build_dir/bin/Neutrino -appimage -always-overwrite
+#    ls -la
+#  fi
 
 install:
 
@@ -80,6 +78,26 @@ before_deploy:
     mv Neutrino.app dmg
     export RELEASE_FILE=Neutrino.dmg
     ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon ./resources/icons/icon.icns --background ./resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 ${RELEASE_FILE} dmg
+  fi
+- |
+  if [[ "$TRAVIS_OS_NAME" == "linux" ]]
+  then
+    sudo apt-get update ; sudo apt-get -y install libfuse-dev libglib2.0-dev cmake git libc6-dev binutils fuse # debian, Ubuntu
+    git clone https://github.com/probonopd/AppImageKit.git
+    cd AppImageKit && cmake . && make && cd ..
+    mkdir -p Neutrino.AppDir/usr
+    cp -r build_dir/lib build_dir/bin Neutrino.AppDir/usr
+    cp AppImageKit/AppRun Neutrino.AppDir
+    cp resources/icons/icon.png resources/linuxPackage/Neutrino.desktop Neutrino.AppDir
+    mkdir -p Neutrino.AppDir/usr/lib/qt5
+    cp -r ${Qt5_DIR}/../../../plugins Neutrino.AppDir/usr/lib/qt5
+    sudo apt-get install -y pax-utils
+    lddtree Neutrino.AppDir/usr/bin/Neutrino | grep "=>" | awk '{print $3}' | xargs cp -t Neutrino.AppDir/usr/lib/
+    lddtree Neutrino.AppDir/usr/lib/qt5/plugins/platforms/libqxcb.so | grep "=>" | awk '{print $3}' | xargs cp -t Neutrino.AppDir/usr/lib/
+    lddtree Neutrino.AppDir/usr/lib/libPythonQt.so | grep "=>" | awk '{print $3}' | xargs cp -t Neutrino.AppDir/usr/lib/
+    rm -rf Neutrino
+    export RELEASE_FILE=Neutrino-`git describe --abbrev=0 --tags`.AppImage
+    ./AppImageKit/AppImageAssistant Neutrino.AppDir ${RELEASE_FILE}
   fi
 
 deploy:
