--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,13 @@ os:
 - linux
 - osx
 
-osx_image: xcode7.1
-dist: trusty
- 
-sudo: required
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode7.3
+    - os: linux
+      dist: trusty
+      sudo: required
 
 before_install:
 - |
